# Rasterizer

./: .gitignore  CMakeLists.txt
project/: CMakeLists.txt
project/src/: BRDFs.h  Camera.h  DataTypes.h  Matrix.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Utils.h  main.cpp
project/tests/: CMakeLists.txt  Tests.cpp
